# pyrhmn

./: .gitignore  Colab1_for_deeplearn.ipynb  Convolutions_Sidebar.ipynb  Course_2_Part_2_Lesson_3_Notebook.ipynb  Exercise2_Question.ipynb  Exercise_1_House_Prices_Question.ipynb  Horse_or_Human_NoValidation.ipynb  Pyspark.ipynb  Transformers-basic NLP tasks.ipynb  Untitled Diagram.drawio  fb_wish.py  getuseredits.py  google-ocr.py  jpg-txt-combiner-o-docx.py  pdf_split.py  pomo.py  tts.py
Day1/: datetime_date.py  datetime_timedelta.py
Day1..4/: Basics.ipynb  README
Day10/: Python practice.ipynb
Day100/: Random.ipynb  Tel  Telugu Lyrics.ipynb  tweepytest.py  tweepytest.py~
Day11/: reversed_linkedlist.py
Day12/: goldencurve.py  kochsnowflake.py  pyfractal.py  pyfractalsnowflake.py
Day13/: StrToInt.py
Day14/: printDict.py  squareodd.py
Day15/: UpperLowerCount.py  classInstanceParameter.py  inputOutString.py
Day16/: CircleClass.py  CompressDecompress.py  EvenGenerator.py  ParentChildClass.py  assertEven.py  fibonacciUpton.py
Day17/: LakkiReddy.cw127.pkl  LakkiReddy.pkl  fpdftest.py
Day18/: boundbox.py  boundingbox.py  boundingbox1.py  crop_morphology.py  image_split.py  output.hocr
Day19/: Exercise_2_Answer.ipynb  Exercise_3_Question.ipynb  classification.py
Day20/: Exercise4_Question.ipynb
Day21/: reverse_even_list.py
Day22/: Detect Youtube spam comment.ipynb  echobot.py
Day23/: KNN-iris data.ipynb  langdetect.py
Day24/: MatrixCreation.py  (+2 more)
Day35/: app.py  diet_plans.py  pyproject.toml  workout_plans.py
Day35/.streamlit/: config.toml
(+165 files in other folders)
