[project]
name = "bmi-app"
version = "0.1.0"
description = "A Streamlit app to calculate BMI and suggest diet and workout plans for an Indian context."
authors = [
    { name = "Rahimanuddin Shaik", email = "tuxnani@gmail.com" }
]
dependencies = [
    "streamlit>=1.36.0",
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
